<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star_background"
    android:gravity="center"
    android:paddingTop="100dp">

    <ImageView
        android:id="@+id/telescopeImage"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/telescopio_description"
        android:src="@drawable/foto_telescopio" />


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/italiana"
        android:text="@string/app_broker"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/container_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/inter"
            android:gravity="start"
            android:text="@string/ip_address"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/ipAddressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/hintaddress"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="#80FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/inter"
            android:gravity="start"
            android:text="@string/port"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/portInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/hintport"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="1883"
            android:textColor="@android:color/white"
            android:textColorHint="#80FFFFFF" />

        <TextView
            android:id="@+id/connectionResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttonstart"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/button_connect"
        android:textAllCaps="false"
        android:tint="@null"
        android:textColor="@android:color/white"
        android:textSize="25sp" />
</LinearLayout>