<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/alertred"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- Icon/ImageView -->
    <ImageView
        android:id="@+id/alertIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/alertD"
        android:src="@drawable/triangolo" />

    <!-- Inner layout for text -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Data TextView -->
        <TextView
            android:id="@+id/dataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <!-- Message TextView -->
        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/message"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <!-- Topic TextView -->
        <TextView
            android:id="@+id/topicTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:background="@drawable/label_background_red"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:text="@string/topic2"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
