<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filtersPanel"
    android:layout_width="254dp"
    android:layout_height="450dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/panel_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/filtersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtri"
            android:fontFamily="@font/italiana"
            android:textColor="#1A2E3A"
            android:textSize="30sp"
            android:layout_gravity="start" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textColor="#1A2E3A"
        android:textSize="15sp"
        android:layout_marginStart="20sp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textColor="#1A2E3A"
        android:textSize="15sp"
        android:layout_marginStart="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            android:text="@string/date"
            android:textColor="#1A2E3A" />

        <EditText
            android:id="@+id/dateTextFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textSize="12sp"
            android:hint="@string/dataformato"
            android:inputType="none"
            tools:ignore="TextFields" />

        <ImageButton
            android:id="@+id/dateImageFrom"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:contentDescription="@string/bottone"
            android:src="@drawable/calendario" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="12sp"
            android:textColor="#1A2E3A"
            android:fontFamily="@font/inter"/>

        <EditText
            android:id="@+id/timeTextFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/timeformato"
            android:textSize="12sp"
            android:inputType="none"
            android:focusable="false" />

        <ImageButton
            android:id="@+id/timeImageFrom"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:contentDescription="@string/bottone"
            android:src="@drawable/orologio" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textColor="#1A2E3A"
        android:textSize="15sp"
        android:layout_marginStart="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            android:text="@string/date"
            android:textColor="#1A2E3A" />

        <EditText
            android:id="@+id/dateTextTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textSize="12sp"
            android:hint="@string/dataformato"
            android:inputType="none"
            tools:ignore="TextFields" />

        <ImageButton
            android:id="@+id/dateImageTo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:contentDescription="@string/bottone"
            android:src="@drawable/calendario" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="12sp"
            android:textColor="#1A2E3A"
            android:fontFamily="@font/inter"/>

        <EditText
            android:id="@+id/timeTextTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/timeformato"
            android:textSize="12sp"
            android:inputType="none"
            android:focusable="false" />

        <ImageButton
            android:id="@+id/timeImageTo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:contentDescription="@string/bottone"
            android:src="@drawable/orologio" />
    </LinearLayout>
    <Button
        android:id="@+id/exitFilters"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonstart"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/button_exit"
        android:tint="@null"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
</LinearLayout>
