<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/star_background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/telescopeImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/telescopio_description"
        android:src="@drawable/foto_telescopio" />
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/italiana"
        android:text="@string/settings_title"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="424dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/container_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/settingbottons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:background="null"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/chagebrokerbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:contentDescription="@string/changeD"
                    android:src="@drawable/changebroker" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:background="null"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/addtopicbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:contentDescription="@string/addTopic"
                    android:src="@drawable/addtopic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:background="null"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/notificationbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:contentDescription="@string/notification"
                    android:src="@drawable/notification" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:background="null"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/aboutappbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="83dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:contentDescription="@string/notification"
                    android:src="@drawable/aboutapp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:background="@drawable/buttonstart"
            android:fontFamily="@font/alegreya_sans"
            android:text="@string/button_save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="110dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstart"
            android:fontFamily="@font/alegreya_sans"
            android:text="@string/button_exit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>



